updated modals, centered, increased text size, removed white space, fixed hover on gameOption

--- a/public/style.css
+++ b/public/style.css
@@ -133,7 +133,7 @@ button {
     z-index: 1;
     font-family: poppinsblack;
     text-transform: uppercase;
-    padding: 0 1rem;
+    padding: 0 1em;
     justify-self: end;
     outline-offset: 4px;
     -webkit-tap-highlight-color: transparent;
@@ -222,8 +222,8 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
 
 @media(min-width: 768px) {
     h2 {
-        font-size: 3rem;
-        line-height: 2rem;
+        font-size: 4.5rem;
+        line-height: 0.4em;
     }
     button {
         font-size: 1.75rem;
@@ -509,19 +509,20 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
     padding: 1rem 1rem 1.5rem 1rem;
     position: fixed;
     top: 0;
-    left: 0;
     background-color: var(--neutral-900);
     box-sizing: border-box;
     z-index: 3;
     justify-items: center;
     align-items: end;
     row-gap: 1em;
+    align-self: center;
+    justify-self: center
 }
 
 .modal__content {
     grid-column: span 2;
     height: 100%;
-    max-height: calc(90vh - 2rem);
+    /* max-height: calc(90vh - 2rem); */
     width: 100%;
     justify-items: center;
     box-sizing: border-box;
@@ -530,7 +531,8 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
 }
 
 .modal__span {
-    font-size: 18px
+    font-size: 0.4em;
+    line-height: 2em;
 }
 
 .modal__btn {
@@ -705,26 +707,16 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
 
 @media (min-width: 821px) {
     .modal__content--cardSelect {
-        grid-template-columns: repeat(6, 1fr);
-        grid-column-gap: 0.8rem;
-        grid-row-gap: 0.5rem;
-        padding: 1rem 15vw;
+        grid-template-columns: repeat(6, 9vw);
+        grid-column-gap: 1.2rem;
+        grid-row-gap: 1.5rem;
+        /* padding: 1rem 15vw; */
     }
 }
 
 /*/--------------------------------------------/*/
 /*/--------------------------------------------/*/
 /*/--------------------------------------------/*/
-
-
-@media(min-width:845px) {
-    .modal {
-        height: 75%;
-        top: 20%;
-        width: 80%;
-        left: 10%;
-    }
-}
 
 .radio-sibling {
     width: 100%;
@@ -735,26 +727,36 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
     outline-offset: 4px;
 }
 
-.gameSettings__option {
+.gameSettings__optionWrap {
     width: 100%;
     position: relative;
+}
+
+.gameSettings__option {
     transition: 0.1s ease;
 }
 
 .modal__content--gameSettings {
     display: grid;
     overflow-y: scroll;
+    background-color: var(--secondary-base);
+}
+
+.modal__content--gameSettingsWrap {
+    display: grid;
     grid-template-columns: repeat(auto-fill, 30%);
     grid-gap: 1rem;
-    background-color: var(--secondary-base);
     text-align: center;
-    align-content: start;
+    align-content: end;
     justify-content: center;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .gameSettings__span {
     display: block;
     margin-top: 0.25em;
+    font-size: 1.1rem;
     font-family: 'poppinsbold';
 }
 
@@ -806,9 +808,8 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
 
 @media (min-width: 768px) {
 
-    .gameSettings__option:hover .radio-sibling, .boardSelect__li:hover .radio-sibling {
+    .gameSettings__optionWrap:hover .gameSettings__option, .boardSelect__li:hover .radio-sibling {
         background-color: var(--neutral-700);
-
         -webkit-transform: translateY(-6%);
         transform: translateY(-6%);
     }
@@ -824,14 +825,18 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
     .modal {
         height: 75%;
         top: 20%;
-        width: 80%;
-        left: 10%;
+        width: fit-content;
+        min-width: 55vw;
     }
     
     .modal__content--gameSettings {
+        padding: 0;
+    }
+
+    .modal__content--gameSettingsWrap {
         grid-gap: 2rem;
-        grid-template-columns: repeat(auto-fill, 17%);
-        padding: 1rem 10%;
+        grid-template-columns: repeat(5, 9vw);
+        padding: 1rem;
     }
     
     .modal__input--gameSettings{
@@ -845,7 +850,7 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
     -webkit-transform: none;
 }
 
-.gameSettings__option:active, .boardSelect__li:active, .deckSettings__option:active {
+.gameSettings__optionWrap:active .gameSettings__option, .boardSelect__li:active, .deckSettings__option:active {
     -webkit-transform: translateY(-10%);
    transform: translateY(-10%);
 }
@@ -1210,7 +1215,6 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
     .cardReview {
         position: absolute;
         top: 20vh;
-        left: 15vw;
         width: 70vw;
         background-color: var(--neutral-900);
     }
@@ -1350,6 +1354,7 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
         padding: 0 1rem 0 0;
         justify-content: center;
         row-gap: 0
+        overflow-y: auto;
     }
     .alleged__h3 {
         margin-top: 0;
@@ -1429,6 +1434,7 @@ button:disabled:after, button:disabled:hover:after, button:disabled:active:after
 
 .playerWrap h2 {
     grid-column: 1/2;
+    font-size: 2.5rem;
 }
 
 .playerGame {
@@ -1972,14 +1978,14 @@ table, td {
 
 @media(min-width:845px) {
     .modal__content--boardSelect {
-        max-height: calc(80vh - 2rem);
+        max-height: 100%;
     }
     .modal--boardSelect {
         height: 100%;
         width: 100%;
         top: 0;
-        left: 0;
         position: absolute;
+        min-width: auto;
     }
     .board {
         width: 50vh;
